<resources>
    <string name="app_name">Prefix Screener</string>
    <string name="add_prefix">Add prefix</string>
    <string name="hint_prefix">Prefix (with country code)…</string>
    <string name="remove">Remove</string>
    <string name="call_disallow">Disallow call</string>
    <string name="call_reject">Reject call</string>
    <string name="call_silence">Silence call</string>
    <string name="blacklist_empty">Blacklist is empty</string>
    <string name="block">Block</string>
    <string name="reject">Reject</string>
    <string name="silence">Silence</string>
    <string name="message_set_screener">Set Prefix Screener as your default caller ID &amp; spam app to activate call screening.</string>
    <string name="set_as_default">Set as default</string>
    <string name="prefix_plus">+</string>
    <string name="help">Help</string>
    <string name="help_url">https://github.com/asnelling/PrefixScreener/blob/master/README.md</string>
    <string name="no_browser_installed">No browser installed to view help page.</string>
    <string name="history_disallowed">Disallowed</string>
    <string name="history_rejected">Rejected</string>
    <string name="history_silenced">Silenced</string>
    <string name="history_allowed">Allowed</string>
    <string name="history_empty">History is empty</string>
    <string name="tab_blacklist">Blacklist</string>
    <string name="tab_history">History</string>
    <string name="verification_status_not_verified">Not verified</string>
    <string name="verification_status_passed">Verification passed</string>
    <string name="verification_status_failed">Verification failed</string>

</resources>